# cast-spec

./: .gitignore  CLAUDE.md  Cargo.toml  Cast.cast  LICENSE  README.md
crates/cast-extract/: Cargo.toml  README.md
crates/cast-extract/src/: main.rs
crates/cast-lsp/: Cargo.toml  README.md
crates/cast-lsp/src/: diagnostics.rs  lib.rs  main.rs  server.rs
crates/cast-lsp/tests/: run_on.py  smoke.py
crates/cast-os-stdlib/: Cargo.toml  README.md
crates/cast-os-stdlib/src/: architectural_patterns.rs  boot_init.rs  configuration.rs  design_qualities.rs  desktop_session.rs  distributed_os.rs  driver_model.rs  execution_model.rs  failure_modes.rs  fault_recovery.rs  filesystem_storage.rs  interrupts_timers.rs  io_architecture.rs  ipc.rs  isolation.rs  kernel_architecture.rs  kernel_data_structures.rs  kernel_families.rs  kernel_user_boundary.rs  lib.rs  memory_management.rs  multicore_numa.rs  networking.rs  observability.rs  os_algorithms.rs  os_use_cases.rs  power_thermal.rs  realtime.rs  scheduling.rs  security.rs  self_adaptive_os.rs  service_management.rs  update_evolution.rs  virtualization.rs
crates/cast-os-stdlib/src/architectural_patterns/: adaptive_control_loop_os.rs  brokered_access_model.rs  capability_oriented_os_model.rs  declarative_os_configuration_model.rs  event_driven_kernel_model.rs  everything_is_a_file_model.rs  everything_is_an_object_model.rs  formally_verified_kernel_core.rs  handle_based_authority_model.rs  hybrid_interrupt_polling_model.rs  immutable_base_mutable_overlay_os.rs  kernel_fast_path_user_policy_model.rs  least_privilege_service_os.rs  namespace_based_resource_model.rs  policy_driven_os_control_plane.rs  pull_based_device_polling_model.rs  push_based_interrupt_model.rs  self_describing_os_model.rs  transactional_os_state_model.rs  user_space_service_os.rs
crates/cast-os-stdlib/src/boot_init/: boot_measurement_log.rs  boot_target_or_runlevel.rs  bootloader_stage.rs  dependency_based_boot_order.rs  early_kernel_init.rs  firmware_boot_stage.rs  init_process.rs  initramfs_stage.rs  kernel_command_line.rs  kernel_decompression.rs  launchd_service_model.rs  parallel_service_startup.rs  rc_script_init_model.rs  recovery_boot_mode.rs  root_filesystem_mount.rs  safe_mode_boot.rs  secure_boot_policy.rs  service_supervisor.rs  systemd_unit_model.rs  windows_service_control_manager.rs
crates/cast-os-stdlib/src/configuration/: boot_time_configuration.rs  configfs_kernel_object_configuration.rs  configuration_drift_detection.rs  configuration_layering.rs  configuration_rollback.rs  configuration_transaction.rs  environment_variable_configuration.rs  hierarchical_configuration_database.rs  plain_file_configuration.rs  policy_configuration_split.rs  procfs_configuration_view.rs  runtime_mutable_configuration.rs  sysctl_runtime_configuration.rs  sysfs_device_model_view.rs  windows_registry_model.rs
crates/cast-os-stdlib/src/design_qualities/: availability.rs  compatibility.rs  debuggability.rs  determinism.rs  energy_efficiency.rs  extensibility.rs  fault_containment.rs  isolation.rs  latency_predictability.rs  maintainability.rs  mechanism_generality.rs  minimality.rs  observability.rs  performance.rs  policy_flexibility.rs  portability.rs  reliability.rs  scalability.rs  security.rs  usability.rs
crates/cast-os-stdlib/src/desktop_session/: accessibility_tree.rs  audio_server_model.rs  clipboard_service.rs  credential_prompt_broker.rs  desktop_shell.rs  display_server.rs  drag_and_drop_protocol.rs  hotkey_dispatch_system.rs  input_method_framework.rs  notification_service.rs  portal_permission_model.rs  print_spooler.rs  screen_capture_permission_boundary.rs  session_lifecycle.rs  user_session_bus.rs  wayland_compositor_model.rs  windowing_system.rs  x11_networked_window_model.rs
crates/cast-os-stdlib/src/distributed_os/: cluster_membership_service.rs  cluster_recovery_protocol.rs  cluster_scheduler.rs  data_locality_scheduling.rs  distributed_filesystem_namespace.rs  distributed_lock_manager.rs  distributed_process_model.rs  distributed_resource_accounting.rs  distributed_shared_memory.rs  fencing_failed_node.rs  heartbeat_failure_detection.rs  leader_election_service.rs  node_capability_advertisement.rs  process_migration.rs  quorum_membership.rs  remote_device_access.rs  remote_syscall_model.rs  single_system_image.rs  split_brain_failure_mode.rs
crates/cast-os-stdlib/src/driver_model/: acpi_device_model.rs  bottom_half_handler.rs  bus_driver.rs  class_driver.rs  device_power_management.rs  device_tree_model.rs  dma_engine.rs  driver_isolation.rs  driver_stack.rs  filter_driver.rs  firmware_loading_path.rs  function_driver.rs  hotplug_support.rs  interrupt_handler.rs  kernel_mode_driver.rs  linux_driver_model.rs  major_minor_device_number.rs  plug_and_play_manager.rs  softirq.rs  tasklet.rs  workqueue.rs  (+4 more)
crates/cast-spec/: Cargo.toml  GRAMMAR.md  README.md  spec.cast
crates/cast-spec/src/: examples.rs  finder.rs  graph.rs  lib.rs  model.rs  project.rs  tree.rs
crates/cast-spec/tests/: smoke.rs
crates/cast-stdlib/: Cargo.toml  README.md
crates/cast-stdlib/src/: ai.rs  algorithms.rs  api.rs  architecture.rs  bugs.rs  config.rs  consistency.rs  deployment.rs  distributed.rs  docs.rs  errors.rs  function_properties.rs  identity.rs  integration.rs  lib.rs  lifecycle.rs  messaging.rs  networking.rs  observability.rs  patterns.rs  performance.rs  privacy.rs  project_layout.rs  reliability.rs  resources.rs  schema.rs  security.rs  state_data.rs  storage.rs  supply_chain.rs  testing.rs  time_ordering.rs  trust.rs  type_properties.rs  ux.rs  workflow.rs
crates/cast-watch/: Cargo.toml  README.md
crates/cast-watch/src/: classifier.rs  lib.rs  main.rs  state.rs  watcher.rs
crates/cast-web/: Cargo.toml  README.md
crates/cast-web/dev/: bump-heartbeat.sh  cast-spec.sh  cwq.sh  cwqpy.sh  ensure-cast-web.sh  heartbeat-loop.sh  monitor-mailbox.sh  monitor-watcher-log.sh  probe-voluntas.sh
crates/cast-web/src/: draft.rs  frontend.rs  lib.rs  main.rs
crates/cast-web/web/: index.html  package-lock.json  package.json  spec.cast  tsconfig.json
(+1240 files in other folders)
