[package]
name = "cast-os-stdlib"
description = "Experimental: A curated library of reusable OS-level architectural concepts expressed in cast vocabulary. Downstream OS/kernel/cluster projects pull this in and reference its concepts via cast::continues_in! rather than re-deriving the same patterns inline."
keywords = ["architecture", "annotations", "operating-systems", "kernel", "cast"]
categories = ["development-tools", "os"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
cast = { package = "cast-spec", path = "../cast-spec", version = "0.1" }
